# apps.core.preloaded.quickpanel

./: CMakeLists.txt  org.tizen.quickpanel.efl  org.tizen.quickpanel.manifest  org.tizen.quickpanel.rule
daemon/: accessibility.c  accessibility.h  common.c  common.h  common_uic.c  common_uic.h  common_uic_x11.c  dbus_utility.c  dbus_utility.h  handler_controller.c  handler_controller.h  list_util.c  list_util.h  media.c  media.h  modules.c  modules.h  preference.c  preference.h  quickpanel-ui.c  quickpanel-ui.h  quickpanel-ui_x11.c  sim_controller.c  sim_controller.h
daemon/datetime/: datetime.c  datetime.h  util-time.c  util-time.h
daemon/device/: brightness.c
daemon/idletxt/: idletxt.c
daemon/minictrl/: minictrl.c  minictrl.h
daemon/notifications/: activenoti.c  animated_image.c  animated_image.h  brightness.c  noti.c  noti.h  noti_box.c  noti_box.h  noti_display_app.c  noti_display_app.h  noti_gridbox.c  noti_gridbox.h  noti_list_item.c  noti_list_item.h  noti_listbox.c  noti_listbox.h  noti_node.c  noti_node.h  noti_section.c  noti_section.h  noti_util.c  noti_util.h  noti_view.c  noti_view.h  noti_view_boxtype.c  noti_view_listype.c  noti_view_ongoing.c  noti_win.c  noti_win.h  noti_win_x11.c  status_msg.c  ticker.c
daemon/page/: page_base.c  page_base.h  page_edit.c  page_edit.h  page_setting_all.c  page_setting_all.h  pager.c  pager.h  pager_common.c  pager_common.h  pager_common_x11.c
daemon/service/: animated_icon.c  animated_icon.h  configuration.c  configuration.h  emergency_mode.c  emergency_mode.h  keyboard.c  keyboard.h  keyboard_x.c  keyboard_x.h  keyboard_x_x11.c  noti_led.c  noti_led.h  reminder.c  reminder.h  smart_alert.c  smart_alert.h  uninstall.c  uninstall.h
daemon/settings/: setting_module_api.c  setting_module_api.h  setting_utils.c  setting_utils.h  setting_utils_x11.c  settings.c  settings.h  settings_gridbox.c  settings_gridbox.h  settings_icon_common.c  settings_icon_common.h  settings_ipc.c  settings_ipc.h  settings_view_all.c  settings_view_all.h  settings_view_featured.c  settings_view_featured.h
daemon/settings/modules/: assistive_light.c  bluetooth.c  flightmode.c  gps.c  mobile_data.c  rotate-lock.c  sound-profile.c  tethering.c  ultra_power_saving.c  wifi.c
daemon/vi/: vi_manager.c  vi_manager.h
data/: CMakeLists.txt  color_classes.edc  quickpanel.desktop.in  quickpanel.edc  quickpanel.xml.in  quickpanel_activenoti.edc  quickpanel_brightness.edc  quickpanel_datetime.edc  quickpanel_def.h  quickpanel_listbox.edc  quickpanel_listitem_noti.edc  quickpanel_listitem_noti_legacy.edc  quickpanel_listitem_ongoing.edc  quickpanel_minictrl.edc  quickpanel_noti.edc  quickpanel_noti_section.edc  quickpanel_notibox.edc  quickpanel_page_edit.edc  quickpanel_setting.edc  quickpanel_spn.edc  quickpanel_textblock_slide_style.edc  quickpanel_theme.edc  quickpanel_theme_def.h  quickpanel_theme_element.edc  quickpanel_theme_slider.edc
data/base/: CMakeLists.txt  quickpanel_noti.edc  quickpanel_noti_def.h  quickpanel_theme.edc  quickpanel_theme_def.h
debian/: changelog  control  org.tizen.quickpanel.install.in  org.tizen.quickpanel.postinst.in  rules
packaging/: org.tizen.quickpanel.changes  org.tizen.quickpanel.manifest  org.tizen.quickpanel.spec  quickpanel-system.path  quickpanel-system.service  quickpanel.service
packaging/2.4/: quickpanel-system.service
po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  (+13 more)
test/: quickpanel_debug_util.c  quickpanel_debug_util.h
