#CONFIGURE_FILE(${PROJECT_NAME}.desktop.in ${CMAKE_CURRENT_BINARY_DIR}/${VENDOR}.${PROJECT_NAME}.desktop)
#INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${VENDOR}.${PROJECT_NAME}.desktop DESTINATION ${DESKTOPDIR})
CONFIGURE_FILE(${PROJECT_NAME}.xml.in ${CMAKE_CURRENT_BINARY_DIR}/${VENDOR}.${PROJECT_NAME}.xml)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${VENDOR}.${PROJECT_NAME}.xml DESTINATION ${MANIFESTXMLDIR})

CONFIGURE_FILE(${PROJECT_NAME}.sh.in ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME})
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME} DESTINATION /etc/init.d/)

#CONFIGURE_FILE(${PROJECT_NAME}.png ${CMAKE_CURRENT_BINARY_DIR}/${VENDOR}.${PROJECT_NAME}.png COPYONLY)
#INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${VENDOR}.${PROJECT_NAME}.png DESTINATION "/usr/share/icons/default/small")

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/sip.wav DESTINATION "${DATADIR}")

ADD_CUSTOM_TARGET(quickpanel.edj
		COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}/icons  -id ${CMAKE_CURRENT_SOURCE_DIR}/images
		${CMAKE_CURRENT_SOURCE_DIR}/quickpanel.edc
		${CMAKE_CURRENT_BINARY_DIR}/quickpanel.edj
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/quickpanel.edc
)
ADD_DEPENDENCIES(${PROJECT_NAME} quickpanel.edj)

ADD_CUSTOM_TARGET(quickpanel_theme.edj
		COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}/icons -id ${CMAKE_CURRENT_SOURCE_DIR}/images
		${CMAKE_CURRENT_SOURCE_DIR}/quickpanel_theme.edc
		${CMAKE_CURRENT_BINARY_DIR}/quickpanel_theme.edj
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/quickpanel_theme.edc
)
ADD_DEPENDENCIES(${PROJECT_NAME} quickpanel_theme.edj)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/quickpanel.edj DESTINATION ${EDJDIR})
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/quickpanel_theme.edj DESTINATION ${EDJDIR})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons DESTINATION ${RESDIR} FILES_MATCHING PATTERN "*.png")

